###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "platforms", version = "0.0.8")

bazel_dep(name = "spdlog", version = "1.15.3")

bazel_dep(name = "fmt", version = "11.2.0")

bazel_dep(name = "nlohmann_json", version = "3.12.0")
